package com.ops.hunting.alerts.enums;

public enum AlertStatus {
	OPEN, IN_PROGRESS, CLOSED, RESOLVED, FALSE_POSITIVE
}
