package com.ops.hunting.common.enums;

public enum InvestigationStatus {
	OPEN, IN_PROGRESS, PENDING_REVIEW, CLOSED, ESCALATED
}
